[package]
name = "get_grains"
version = "1.0.0"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]

[dependencies]
error-chain = "0.10"
log = "0.3"
loggerv = "0.2"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"

[dependencies.clap]
version = "2"
features = ["yaml"]
