[package]
name = "get_grains"
version = "1.0.0"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
edition = "2021"

[dependencies]
clap = { version = "3", features = ["yaml", "cargo"] }
error-chain = "0.12"
log = "0.4"
loggerv = "0.7"
regex = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
time = "0.3"
